Further work on loading snapshots

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,23 +10,26 @@ find_package(Boost COMPONENTS regex system filesystem timer REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
+find_package (Threads)
+
 set (tooltests_SRC
-test_computer.h test_computer.cpp
+mocks/test_computer.h mocks/test_computer.cpp
 ../computer/consolebadgerio.cpp ../computer/consolebadgerio.h
 test.cpp
 graphics_test.cpp
+computer_utils_test.cpp
 catch.cpp
 )
 
 set (zexrunner_SRC
 ../computer/consolebadgerio.cpp ../computer/consolebadgerio.h
 zexrunner.cpp zexrunner.h
-test_computer.h test_computer.cpp
+mocks/test_computer.h mocks/test_computer.cpp
 )
 
 add_executable(tooltests ${tooltests_SRC})
 
 add_executable(zexrunner ${zexrunner_SRC})
 
-target_link_libraries(tooltests ${Boost_LIBRARIES} Z80)
+target_link_libraries(tooltests ${Boost_LIBRARIES} Z80 ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(zexrunner ${Boost_LIBRARIES} Z80 ${Boost_SYSTEM_LIBRARY})
