--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package (Threads)
 
 set (tooltests_SRC
         mocks/test_computer.h mocks/test_computer.cpp
+        mocks/test_io.h mocks/test_io.cpp
         ../computer/cpm/badgerio.cpp ../computer/cpm/badgerio.h
         ../computer/cpm/consolebadgerio.cpp ../computer/cpm/consolebadgerio.h
         test.cpp
@@ -25,6 +26,7 @@ set (tooltests_SRC
 set (zexrunner_SRC
         zexrunner.cpp
         mocks/test_computer.h mocks/test_computer.cpp
+        mocks/test_io.h mocks/test_io.cpp
         ../computer/cpm/consolebadgerio.cpp ../computer/cpm/consolebadgerio.h
         ../computer/cpm/badgerio.cpp ../computer/cpm/badgerio.h
         )
