--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: sudo apt-get install liblua5.4-dev libboost-dev catch2
+      run: sudo apt-get install liblua5.3-dev libboost-dev libboost-regex-dev libboost-system-dev libboost-filesystem-dev libboost-timer-dev qt5-default libqt5svg5-dev catch
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
