--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install dependencies
       run: sudo apt-get install liblua5.3-dev libboost-dev libboost-regex-dev libboost-system-dev libboost-filesystem-dev libboost-timer-dev qt5-default libqt5svg5-dev
     
+    - name: Update submodules
+      run: git submodule update --init --recursive --remote
+    
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
