--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,24 +4,31 @@ project(testproject)
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#set(Boost_DEBUG OFF)
+# set(Boost_DEBUG OFF)
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost COMPONENTS regex system filesystem REQUIRED)
+find_package(
+  Boost
+  COMPONENTS regex system filesystem
+  REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS})
-LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
 
 set(tools_SRC
-FinalNode.cpp FinalNode.hpp
-GetData.cpp GetData.hpp
-Switch.cpp Switch.hpp
-Instruction.cpp Instruction.hpp
-InstructionTableToCode.cpp InstructionTableToCode.hpp
-Case.cpp Case.hpp
-)
-
+    FinalNode.cpp
+    FinalNode.hpp
+    GetData.cpp
+    GetData.hpp
+    Switch.cpp
+    Switch.hpp
+    Instruction.cpp
+    Instruction.hpp
+    InstructionTableToCode.cpp
+    InstructionTableToCode.hpp
+    Case.cpp
+    Case.hpp)
 
 add_executable(tool ${tools_SRC})
 
