--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -4,18 +4,14 @@ project(scripting)
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#set(Boost_DEBUG OFF)
-# set(Boost_USE_STATIC_LIBS OFF)
-# set(Boost_USE_MULTITHREADED ON)
-# set(Boost_USE_STATIC_RUNTIME OFF)
+# set(Boost_DEBUG OFF) set(Boost_USE_STATIC_LIBS OFF)
+# set(Boost_USE_MULTITHREADED ON) set(Boost_USE_STATIC_RUNTIME OFF)
 find_package(Lua REQUIRED)
 
 include_directories(${LUA_INCLUDE_DIR})
 # LINK_DIRECTORIES(${Lua_LIBRARY_DIRS})
 
-set(scripting_SRC
-    sampleluahost.cpp
-)
+set(scripting_SRC sampleluahost.cpp)
 
 add_executable(scripting ${scripting_SRC})
 
