--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
       run: sudo apt-get install liblua5.3-dev libboost-dev libboost-regex-dev libboost-system-dev libboost-filesystem-dev libboost-timer-dev qt5-default libqt5svg5-dev
     
     - name: Update submodules
-      run: git submodule update --init --recursive --remote
+      run: git submodule update --recursive
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
